Fix contrast errors

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ pre {
   font-size: 1em; }
 
 a {
+  color: #1E749F;
   background-color: transparent; }
 
 abbr[title] {
@@ -377,6 +378,7 @@ textarea {
 
 /* Text meant only for screen readers */
 .screen-reader-text {
+  color: #000;
   clip: rect(1px, 1px, 1px, 1px);
   overflow: hidden;
   position: absolute !important;
