--- a/sass/base/_normalize.scss
+++ b/sass/base/_normalize.scss
@@ -17,6 +17,7 @@ pre {
 }
 
 a {
+  color: #1E749F;
   background-color: transparent;
 }
 
